--- a/src/app/modules/performance/pages/key-result-area/key-result-area.component.html
+++ b/src/app/modules/performance/pages/key-result-area/key-result-area.component.html
@@ -34,6 +34,20 @@
       </div>
 
       <div class="form-group">
+        <label>Strategy Category ID</label>
+        <select class="form-control" [(ngModel)]="editingData.strategyCategoryId">
+          <option value="1">Financia</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label>Rating Type</label>
+        <select class="form-control" [(ngModel)]="editingData.strategyCategoryId">
+          <option value="1">Open Ended</option>
+        </select>
+      </div>
+
+      <div class="form-group">
         <label>Key Result Area</label>
         <input class="form-control" [(ngModel)]="editingData.section_name"/>
       </div>
