--- a/src/app/modules/performance/page/set-kpi/set-kpi.component.html
+++ b/src/app/modules/performance/page/set-kpi/set-kpi.component.html
@@ -56,7 +56,7 @@
             </thead>
             <tbody>
                 <tr *ngFor="let kpi of data">
-                    <td>{{kpi.section_name}}</td>
+                    <td>{{kpi.title}}</td>
                     <td>{{kpi.unitOfMeasurement}}</td>
                     <td>{{kpi.sectionTotalScore}}</td>
                     <td>{{kpi.canComment}}</td>
@@ -106,7 +106,7 @@
                   </button>
                 </div>
               </div>
-            
+
         </div>
     </div>
     <div modal-footer>
