Updated Compare  Competency

--- a/src/app/modules/career-succession/profile-details/profile-details.component.html
+++ b/src/app/modules/career-succession/profile-details/profile-details.component.html
@@ -497,7 +497,7 @@ Create Succession
         </div>
     </ngx-side-modal>
 
-  <ngx-side-modal [(show)]='compareCompetency' [position]="center" style="width: 600px;">
+  <ngx-side-modal [(show)]='compareCompetency' [position]="'center'" style="width: 600px;">
       <div modal-header>Compare Competency</div>
       <div modal-body>
               <form name="planForm" #planForm="ngForm">
